--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,13 @@
 @tailwind utilities;
 
 @layer base {
-  body {
-    @apply flex justify-center w-full;
+  body,
+  html {
+    @apply flex justify-center w-full h-full items-center;
+  }
+}
+@layer components {
+  .btn {
+    @apply border border-gray-500 flex items-center justify-center py-0.5 px-3 rounded-md bg-slate-100 hover:bg-slate-200 min-w-6 w-fit disabled:text-gray-300 disabled:hover:bg-slate-100;
   }
 }
